--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,17 +18,16 @@
   <meta name="description" content="A web app created by OSU students, for OSU students.
     This project was created by Team 1 for the CS494 Advanced Web Development course at Oregon State University as a final project.
     The project was created using React, Node.js, Express, and MongoDB.
-    Talk2Beavs is a web app for messaging and chatting with other OSU students.
-    Users can create an account, login, and send messages to other users.
-    The app also has a chat feature where users can chat with other users in real time.
-    In Talk2Beavs, chat supports both video and text chat.
-    The app also has a feature where users can follow and unfollow other users.
-    Users can also view their own profile and edit their profile information." />
+    " />
   <meta name="keywords" content="Oregon State University, CS494, Final Project, Talk2Beavs, Web App, Chat, Messaging" />
   <meta name="author" content="Team 1 - Talk2Beavs" />
   <style>
     ::-webkit-scrollbar {
       display: none;
+    }
+
+    body {
+      margin: 0;
     }
   </style>
 </head>
