--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,13 +14,26 @@
   <meta name="geo.region" content="US-OR" />
   <meta name="geo.position" content="44.5646;-123.2620" />
   <meta name="ICBM" content="44.5646, -123.2620" />
-  <title>Talk2Beavs - OSU CS494 Final Project</title>
-  <meta name="description" content="A web app created by OSU students, for OSU students.
-    This project was created by Team 1 for the CS494 Advanced Web Development course at Oregon State University as a final project.
-    The project was created using React, Node.js, Express, and MongoDB.
-    " />
-  <meta name="keywords" content="Oregon State University, CS494, Final Project, Talk2Beavs, Web App, Chat, Messaging" />
-  <meta name="author" content="Team 1 - Talk2Beavs" />
+  <title>TalkToBeavs - Real-time Chat for OSU Students</title>
+  <meta name="description" content="A web app created by OSU students, for OSU students. Experience the power of real-time chat with TalkToBeavs." />
+  <meta name="keywords" content="Oregon State University, CS494, Final Project, Talk2Beavs, Web App, Chat, Messaging, Real-time, Chat App" />
+  <meta name="author" content="talktobeavs@gmail.com" />
+
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://talktobeavs.onrender.com" />
+<meta property="og:title" content="TalkToBeavs - Real-time Chat for OSU Students" />
+<meta property="og:description"
+    content="A web app created by OSU students, for OSU students. Experience the power of real-time chat with TalkToBeavs." />
+<meta property="og:image" content="/meta-image.png" />
+
+
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://talktobeavs.onrender.com" />
+<meta property="twitter:title" content="TalkToBeavs - Real-time Chat for OSU Students" />
+<meta property="twitter:description"
+    content="A web app created by OSU students, for OSU students. Experience the power of real-time chat with TalkToBeavs." />
+<meta property="twitter:image" content="/meta-image.png" />
+
   <style>
     ::-webkit-scrollbar {
       display: none;
@@ -29,6 +42,10 @@
     body {
       margin: 0;
     }
+
+    *, html {
+            scroll-behavior: smooth !important;
+        }
   </style>
 </head>
 
